[gd_scene load_steps=13 format=1]

[ext_resource path="res://rcos_core/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://rcos_core/zem_gui/zem.gd" type="Script" id=2]
[ext_resource path="res://rcos_core/zem_gui/sidebar.tscn" type="PackedScene" id=3]
[ext_resource path="res://rcos_core/zem_gui/graphics/rcos_button_box.png" type="Texture" id=4]
[ext_resource path="res://rcos_core/zem_gui/rcos_button.gd" type="Script" id=5]
[ext_resource path="res://rcos_core/zem_gui/graphics/rcos_button_icon_part1.png" type="Texture" id=6]
[ext_resource path="res://rcos_core/zem_gui/graphics/rcos_button_icon_part2.png" type="Texture" id=7]
[ext_resource path="res://rcos_core/zem_gui/graphics/rcos_button_icon_part3.png" type="Texture" id=8]
[ext_resource path="res://rcos_core/zem_gui/zem_hsplit2.gd" type="Script" id=9]
[ext_resource path="res://rcos_core/zem_gui/taskbar.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 2.0
margin/right = 2.0
margin/top = 2.0
margin/bottom = 2.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="zem" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 2 )

[node name="hsplit" type="HBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 0
alignment = 0

[node name="desktop" type="ReferenceFrame" parent="hsplit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 400.0

[node name="background" type="ColorFrame" parent="hsplit/desktop"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.258824, 0.388235, 0.560784, 1 )

[node name="wm" type="Control" parent="hsplit/desktop"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="sidebar" parent="hsplit" instance=ExtResource( 3 )]

anchor/right = 0
anchor/bottom = 0
rect/min_size = Vector2( 40, 40 )
margin/left = 200.0
margin/right = 240.0
margin/bottom = 400.0

[node name="vsplit" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 0
alignment = 0

[node name="hsplit1" type="HBoxContainer" parent="vsplit"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 40.0
alignment = 0

[node name="empty" type="ReferenceFrame" parent="vsplit/hsplit1"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 196.0
margin/bottom = 40.0

[node name="rcos_panel" type="Panel" parent="vsplit/hsplit1"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 40.0
custom_styles/panel = SubResource( 2 )

[node name="rcos_button" type="Button" parent="vsplit/hsplit1/rcos_panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 1.0
margin/right = 1.0
margin/bottom = 3.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 5 )

[node name="part1" type="TextureFrame" parent="vsplit/hsplit1/rcos_panel/rcos_button"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 1.0
margin/right = 1.0
margin/bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="Control" type="Control" parent="vsplit/hsplit1/rcos_panel/rcos_button"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="part2" type="Sprite" parent="vsplit/hsplit1/rcos_panel/rcos_button/Control"]

transform/pos = Vector2( -0.5, 0 )
texture = ExtResource( 7 )

[node name="part3" type="TextureFrame" parent="vsplit/hsplit1/rcos_panel/rcos_button"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 1.0
margin/right = 1.0
margin/bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="hsplit2" type="HBoxContainer" parent="vsplit"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 40.0
margin/right = 240.0
margin/bottom = 400.0
alignment = 0
script/script = ExtResource( 9 )

[node name="empty" type="ReferenceFrame" parent="vsplit/hsplit2"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 196.0
margin/bottom = 360.0

[node name="taskbar" parent="vsplit/hsplit2" instance=ExtResource( 10 )]

rect/min_size = Vector2( 40, 40 )
margin/left = 200.0
margin/right = 240.0
margin/bottom = 360.0


